--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 
     <h3>Lista</h3>
 
-        <!-- ul>li*5{Element listy} -->
-        <ul>
-            <li>Element listy</li>
-            <li>Element listy</li>
-            <li>Element listy</li>
-            <li>Element listy</li>
-            <li>Element listy</li>
-        </ul>
+    <!-- ul>li*5{Element listy} -->
+    <ul>
+        <li>Element listy</li>
+        <li>Element listy</li>
+        <li>Element listy</li>
+        <li>Element listy</li>
+        <li>Element listy</li>
+    </ul>
 
     <h3>Linki</h3>
-        <div>
-             <span>
-                <a href="" class="link">Odnośnik</a>
-                <a href="" class="link">Odnośnik</a>
-            </span>
-        </div>
+    <div>
+        <span>
+            <a href="" class="link">Odnośnik</a>
+            <a href="" class="link">Odnośnik</a>
+        </span>
+    </div>
       
-                 <a href="">Odnośnik</a>
+    <a href="">Odnośnik</a>
 
-        <h3>Obrazek</h3>
-             <img src="F:\Data Hub\Wiedza\Szkolenia\Academy 108\Zadanie32619\logo.png" alt="logo" >
+    <h3>Obrazek</h3>
+        <img src="logo.png" alt="logo">
 
 
 </body>
